--- a/detect_printer_phone.ipynb
+++ b/detect_printer_phone.ipynb
@@ -187,11 +187,11 @@
    },
    "outputs": [],
    "source": [
-    "model = 'ssd_mobilenet_v2_320x320_coco17_tpu-8'\n",
+    "model = 'ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8'\n",
     "experiment='run1'\n",
-    "export_root_dir = '/home/ubuntu/balloon_project/exported_models'\n",
+    "export_root_dir = '/home/ubuntu/printer_phone_project/exported_models'\n",
     "\n",
-    "# Uncomment the following if you want to use a pretrained balloon detection model\n",
+    "# Uncomment the following if you want to use a pretrained printer and phone detection model\n",
     "# model_dir = 'mymodel/saved_model'\n",
     "model_dir = os.path.join(export_root_dir, f'{model}/{experiment}/saved_model')\n",
     "\n",
